--- a/src/app/pages/lesson/update/update.lesson.component.html
+++ b/src/app/pages/lesson/update/update.lesson.component.html
@@ -16,28 +16,41 @@
           </div>
           <div class="col-4 text-right">
             <a routerLink="/system-admin/lesson" class="btn btn-sm btn-info mr-4">Back</a>
-            <a href="javascript:void(0)" class="btn btn-sm btn-default float-right">Save</a>
+            <a [routerLink]="['/system-admin/']" href="javascript:void(0)"
+              class="btn btn-sm btn-default float-right">Save</a>
           </div>
         </div>
       </div>
       <div class="card-body">
-        <form>
+        <div class="alert alert-success col-3" role="alert">
+          <strong>Success!</strong> Bạn đã thêm mới thành công!
+        </div>
+
+        <div class="alert alert-danger col-3" role="alert">
+          <strong>Danger!</strong> Bạn đã thêm mới thất bại!
+        </div>
+      </div>
+      <div class="card-body">
+        <form [formGroup]="editForm">
+          <div class="progress mt-3">
+            <div class="progress-bar bg-success" role="progressbar" style="width: 90%;" aria-valuenow="90"
+              aria-valuemin="0" aria-valuemax="100">90%</div>
+          </div>
           <div class="pl-lg-12">
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group text-center">
+                  <input type="file" id="video-file" accept="video/*" style="display: none;"
+                    (change)="handleFileInput($event.target.files)">
                   <video id="video-player" style="width: 100%;" height="auto" controls>
                     <source id="video-source" type="video/mp4">
                     Your browser does not support the video tag.
                   </video>
-                  <div class="progress mt-3">
-                    <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"
-                      aria-valuemin="0" aria-valuemax="100">25%</div>
-                  </div>
                 </div>
                 <div class="form-group text-right">
                   <button id="cancel-button" class="btn btn-sm btn-default">Hủy</button>
-                  <button id="choose-button" class="btn btn-sm btn-info float-right mr-4">Chọn</button>
+                  <button id="choose-button" class="btn btn-sm btn-info float-right mr-4"
+                    (click)="openFilePicker()">Chọn</button>
                 </div>
               </div>
               <div class="col-md-4">
@@ -50,23 +63,24 @@
                 </div>
                 <div class="col-lg-12">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-title">Title :</label>
+                    <label class="form-control-label" for="input-title">Tiêu đề :</label>
                     <input type="text" id="input-title" class="form-control form-control-alternative"
-                      placeholder="Title" formControlName="title">
+                      placeholder="Tiêu đề" formControlName="title">
                   </div>
                 </div>
                 <div class="col-lg-12">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-time">Time :</label>
-                    <input type="time" id="input-time" class="form-control form-control-alternative"
-                      placeholder="Time Lesson" formControlName="time">
+                    <label class="form-control-label" for="input-time">Thời gian :</label>
+                    <input type="text" id="input-time" class="form-control form-control-alternative"
+                      placeholder="Thời gian" formControlName="time" [disabled]="'input-time'">
                   </div>
                 </div>
                 <div class="col-md-12">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-section">Section</label> <select id="section"
-                      class="form-control" formControlName="section_id">
-                      <option value="" *ngFor="let item of section" [value]="item.id">{{item.title}}</option>
+                    <label class="form-control-label" for="input-section">Bài học :</label>
+                    <select id="section" class="form-control" formControlName="section_id">
+                      <option value="Chọn bài học" disabled selected hidden></option>
+                      <option *ngFor="let item of section" [value]="item.id">{{item.title}}</option>
                     </select>
                   </div>
                 </div>
@@ -74,6 +88,7 @@
             </div>
           </div>
         </form>
+
       </div>
     </div>
   </div>
