--- a/src/app/pages/discount/list/discount.component.html
+++ b/src/app/pages/discount/list/discount.component.html
@@ -80,25 +80,33 @@
           </table>
         </div>
         <div class="card-footer py-4">
-          <nav aria-label="...">
-            <ul class="pagination justify-content-end mb-0">
-              <li class="page-item" [class.disabled]="page === 0">
-                <a class="page-link" tabindex="-1" (click)="navigateToPage(page - 1)">
-                  <i class="fas fa-angle-left"></i>
-                  <span class="sr-only">Previous</span>
-                </a>
-              </li>
-              <li class="page-item" *ngFor="let i of getPageArray(); let index = index" [class.active]="i === page">
-                <a class="page-link" (click)="navigateToPage(i)">{{ i }}</a>
-              </li>
-              <li class="page-item" [class.disabled]="page === totalPages">
-                <a class="page-link" (click)="navigateToPage(page + 1)">
-                  <i class="fas fa-angle-right"></i>
-                  <span class="sr-only">Next</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
+          <div class="d-flex align-items-center">
+            <select class="form-select mr-3" style="width: 100px;" [(ngModel)]="size" (ngModelChange)="onSizeChange($event)">
+              <option value="3">3</option>
+              <option value="5">5</option>
+              <option value="10">10</option>
+            </select>
+            <div class="ml-auto"></div> <!-- Thêm phần này để tạo khoảng trống bên phải -->
+            <nav aria-label="...">
+              <ul class="pagination justify-content-end mb-0">
+                <li class="page-item" [class.disabled]="page === 0">
+                  <a class="page-link" tabindex="-1" (click)="navigateToPage(page - 1)">
+                    <i class="fas fa-angle-left"></i>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                </li>
+                <li class="page-item" *ngFor="let i of getPageArray(); let index = index" [class.active]="i === page">
+                  <a class="page-link" (click)="navigateToPage(i)">{{ i }}</a>
+                </li>
+                <li class="page-item" [class.disabled]="page === totalPages">
+                  <a class="page-link" (click)="navigateToPage(page + 1)">
+                    <i class="fas fa-angle-right"></i>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
       </div>
     </div>
