--- a/projects/user/src/app/pages/home/home.component.css
+++ b/projects/user/src/app/pages/home/home.component.css
@@ -1,143 +1,144 @@
 /*Home-grid*/
-.home-grid .box-container{
+.home-grid .box-container {
     display: grid;
-    gap:1.5rem;
+    gap: 1.5rem;
     align-items: flex-start;
 }
 
-.home-grid .box-container .box{
+.home-grid .box-container .box {
     background-color: var(--white);
     border-radius: .5rem;
-    padding:2rem;
+    padding: 2rem;
 }
 
-.home-grid .box-container .box .title{
+.home-grid .box-container .box .title {
     font-size: 2rem;
     color: var(--black);
     text-transform: capitalize;
 }
 
-.home-grid .box-container .box .flex{
+.home-grid .box-container .box .flex {
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
     margin-top: 2rem;
 }
 
-.home-grid .box-container .flex a{
+.home-grid .box-container .flex a {
     background-color: var(--light-bg);
     border-radius: .5rem;
     padding: 1rem 1.5rem;
     font-size: 1.5rem;
 }
 
-.home-grid .box-container .flex a i{
+.home-grid .box-container .flex a i {
     margin-right: 1rem;
-    color:var(--black);
+    color: var(--black);
 }
 
-.home-grid .box-container .flex a span{
-    color:var(--light-color);
+.home-grid .box-container .flex a span {
+    color: var(--light-color);
 }
 
-.home-grid .box-container .flex a:hover{
+.home-grid .box-container .flex a:hover {
     background-color: var(--black);
 }
 
-.home-grid .box-container .flex a:hover span{
-    color:var(--white);
+.home-grid .box-container .flex a:hover span {
+    color: var(--white);
 }
 
-.home-grid .box-container .flex a:hover i{
-    color:var(--white);
+.home-grid .box-container .flex a:hover i {
+    color: var(--white);
 }
 
-.home-grid .box-container .tutor{
+.home-grid .box-container .tutor {
     padding: 1rem 0;
     font-size: 1.8rem;
-    color:var(--light-color);
+    color: var(--light-color);
     line-height: 2;
 }
 
-.home-grid .box-container .likes{
-    color:var(--light-color);
+.home-grid .box-container .likes {
+    color: var(--light-color);
     font-size: 1.7rem;
     margin-top: 1.5rem;
 }
 
-.home-grid .box-container .likes span{
-    color:var(--main-color);
+.home-grid .box-container .likes span {
+    color: var(--main-color);
 }
 
 /*Course*/
-.courses .box-container{
+.courses .box-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    gap:1.5rem;
+    gap: 1.5rem;
     justify-content: center;
     align-items: flex-start;
 }
 
-.courses .box-container .box{
+.courses .box-container .box {
     border-radius: .5rem;
     background-color: var(--white);
     padding: 2rem;
 }
 
-.courses .box-container .box .tutor{
+.courses .box-container .box .tutor {
     display: flex;
     align-items: center;
     gap: 1.5rem;
     margin-bottom: 2.5rem;
 }
 
-.courses .box-container .box .tutor img{
+.courses .box-container .box .tutor img {
     height: 5rem;
     width: 5rem;
     border-radius: 50%;
     object-fit: cover;
 }
 
-.courses .box-container .box .tutor h3{
+.courses .box-container .box .tutor h3 {
     font-size: 1.8rem;
     color: var(--black);
     margin-bottom: .2rem;
 }
 
-.courses .box-container .box .tutor span{
+.courses .box-container .box .tutor span {
     font-size: 1.3rem;
-    color:var(--light-color);
+    color: var(--light-color);
 }
 
-.courses .box-container .box .thumb{
+.courses .box-container .box .thumb {
     position: relative;
 }
 
-.courses .box-container .box .thumb span{
+.courses .box-container .box .thumb span {
     position: absolute;
-    top:1rem; left: 1rem;
+    top: 1rem;
+    left: 1rem;
     border-radius: .5rem;
     padding: .5rem 1.5rem;
-    background-color: rgba(0,0,0,.3);
+    background-color: rgba(0, 0, 0, .3);
     color: #fff;
     font-size: 1.5rem;
 }
 
-.courses .box-container .box .thumb img{
+.courses .box-container .box .thumb img {
     width: 100%;
     height: 20rem;
     object-fit: cover;
     border-radius: .5rem;
 }
 
-.courses .box-container .box .title{
+.courses .box-container .box .title {
     font-size: 2rem;
     color: var(--black);
     padding-bottom: .5rem;
     padding-top: 1rem;
 }
 
-.courses .more-btn{
+.courses .more-btn {
     text-align: center;
     margin-top: 2rem;
 }
@@ -179,42 +180,52 @@ ul.nav {
     background-color: var(--main-color);
     display: flex;
     padding: 10px;
-  }
+    position: relative;
+    z-index: 1;
+}
 
-  ul.nav li {
+ul.nav li {
     position: relative;
     padding: 10px;
     color: #fff;
     cursor: pointer;
-  }
+    z-index: 2;
+    padding-right: 50px;
+}
 
-  ul.nav li:hover {
+ul.nav li:hover {
     background-color: #58bcfa;
-  }
+}
 
-  ul.nav ul {
+ul.nav ul {
     display: none;
     position: absolute;
     top: 100%;
     left: 0;
     background-color: #87cefa;
     border-top: 1px solid #555;
-  }
+    z-index: 3;
+}
 
-  ul.nav li:hover > ul {
+ul.nav li:hover>ul {
     display: block;
-  }
+}
 
-  ul.nav ul li {
+ul.nav ul li {
     width: 100%;
-  }
+    z-index: 4;
+}
 
-  ul.nav ul ul {
+ul.nav ul ul {
     left: 100%;
     top: 0;
-  }
+    z-index: 5;
+}
 
-  
-a{
+li {
+    list-style: none;
+}
+
+a {
     text-decoration: none;
 }
