--- a/src/app/pages/lesson/list/lesson.component.html
+++ b/src/app/pages/lesson/list/lesson.component.html
@@ -67,7 +67,7 @@
                       <i class="fas fa-ellipsis-v"></i>
                     </a>
                     <div ngbDropdownMenu class=" dropdown-menu-right dropdown-menu-arrow">
-                      <a class="dropdown-item" [routerLink]="['/system-admin/lesson', item.id ,'new']">Cập nhật</a>
+                      <a class="dropdown-item" [routerLink]="['/system-admin/lesson', item.id ,'edit']">Cập nhật</a>
                       <a class="dropdown-item" href="javascript:void(0)">Xóa</a>
                     </div>
                   </div>
