--- a/src/app/pages/lesson/update/update.lesson.component.html
+++ b/src/app/pages/lesson/update/update.lesson.component.html
@@ -31,7 +31,7 @@
         </div>
       </div>
       <div class="card-body">
-        <form [formGroup]="editForm">
+        <form [formGroup]="editForm" (ngSubmit)="save()">
           <div class="progress mt-3">
             <div class="progress-bar bg-success" role="progressbar" style="width: 90%;" aria-valuenow="90"
               aria-valuemin="0" aria-valuemax="100">90%</div>
@@ -72,7 +72,7 @@
                   <div class="form-group">
                     <label class="form-control-label" for="input-time">Thời gian :</label>
                     <input type="text" id="input-time" class="form-control form-control-alternative"
-                      placeholder="Thời gian" formControlName="time" [disabled]="'input-time'">
+                      placeholder="Thời gian" formControlName="time" disabled="input-time">
                   </div>
                 </div>
                 <div class="col-md-12">
@@ -88,7 +88,6 @@
             </div>
           </div>
         </form>
-
       </div>
     </div>
   </div>
