DONE: func UPDATE for my-profile & list user

--- a/src/app/pages/user-profile/list/user-profile.component.html
+++ b/src/app/pages/user-profile/list/user-profile.component.html
@@ -37,7 +37,7 @@
                 <th scope="row">
                   <div class="media align-items-center">
                     <div class="media-body">
-                      <span class="mb-0">{{ u.fullName }}</span>
+                      <span class="mb-0">{{ u.fullname }}</span>
                     </div>
                   </div>
                 </th>
